Add Shadowdark Database data and update UI
Add bestiary, item, and spell data as JSON files. Update manifest and UI
to use the new Shadowdark Database name and branding. Replace the
default app UI with an iframe embedding the Shadowdark Database site.
Remove demo code and unused assets. Update styles for full-size iframe
display.

--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
-  "name": "Hello, World!",
+  "name": "Shadowdark Database",
   "version": "1.0.0",
   "manifest_version": 1,
   "action": {
-    "title": "Hello, World!",
+    "title": "Shadowdark Database",
     "icon": "/icon.svg",
     "popover": "/",
     "height": 600,
-    "width": 400
+    "width": 800
   }
 }
