--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "Shadowdark Database",
+  "name": "Shadowdark Tome",
   "version": "1.0.0",
   "manifest_version": 1,
   "action": {
-    "title": "Shadowdark Database",
+    "title": "Shadowdark Tome",
     "icon": "/icon.svg",
     "popover": "/",
     "height": 600,
